# Search

./: .gitignore  BuildExternalLibs.cmake  CMakeLists.txt  README.md  Search.code-workspace  main.cpp
config/: database_test_data.yml
notes/: known-issues.txt  planned-changes.txt  redhat-devel-dependencies.txt  unordered-thoughts.txt
src/: database.cpp  database.h  linux_threadpool.cpp  linux_threadpool.h  search.cpp  search.h
src/DDL/: table_paragraphs.cpp  table_paragraphs.h  table_words.cpp  table_words.h  table_words_to_paragraphs.cpp  table_words_to_paragraphs.h
src/Graphics/: ImGuiBinding.cpp  ImGuiBinding.h  VulkanDevice.cpp  VulkanDevice.h  Window.cpp  Window.h
src/Structures/: NormalizedText.cpp  NormalizedText.h  WordMatch.cpp  WordMatch.h
